GVW-26 Profile: View personal detail / add kys service

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       })(window, document, 'script', 'dataLayer', 'GTM-NJLM6BD');
     }</script>
   <!-- End Google Tag Manager -->
+  <script src="%REACT_APP_IDENSIC_SRC%"></script>
 </head>
 
 <body>
